---Changes history with TigerJS  1.2.2 [17/02/2017]
        #This release represents a major release full of performance tweaks and bug fixes

        NEW_MODULE/OBJECT: Added TigerJS.xui The base for da futuristic HUD UI elements (Think -Minority report, -Iron man etc
        NEW_MODULE/OBJECT: Added TigerJS.xuiLine A sub object of TigerJS.xui used for rendereing SVG based lines
        NEW_MODULE/OBJECT: Added TigerJS.xuiText A sub object of TigerJS.xui that create's rectangular an SVG boxe for text
        NEW_MODULE/OBJECT: Added TigerJS.xuiTextb A sub object of TigerJS.xui that create's an SVG polygon box for text
        NEW_MODULE/OBJECT: Added TigerJS.xuiTextc A sub object of TigerJS.xui that create's an SVG text container, with borders only on one side
        NEW_MODULE/OBJECT: Added TigerJS.xuiTextd A sub object of TigerJS.xui that create's an SVG text container, without border strokes 
        NEW_MODULE/OBJECT: Added TigerJS.xuiCircle A sub object of TigerJS.xui that create's an SVG circle, that contain optionally hold an image
        NEW_MODULE/OBJECT: Added TigerJS.xuiContainer A sub object of TigerJS.xui that create's a generic SVG based container that can be used
                                                     to hold other TigerJS.xui sub objects including the various xuiText.. variants, images and 
                                                     other DOM content
        NEW_MODULE/OBJECT: Added TigerJS.xuiContainerb A sub object of TigerJS.xui that create's a generic SVG based container that can be used
                                                     to hold other TigerJS.xui sub objects including the various xuiText.. variants, images and 
                                                     other DOM content
        NEW_MODULE/OBJECT: Added TigerJS.xuiCaptionedContainer A sub object of TigerJS.xui that create's a generic SVG based container that can be used