@@ -93,7 +93,7 @@ Error(b);if(T.dom_ready())if("OFFLINE"===T.NETWORK_STATE&&a.subscribe.onerror)a.
 "] is UNKNOWN";throw Error(b);}g=a.method?a.method.toUpperCase():"POST";if(a.uri){if(h.host&&h.host!==e.host)throw b="SecurityError <> Constructor TigerJS.io The Request HOST ("+h.host+") doesnt match its ORIGIN ("+e.host+")",Error(b);h.host&&h.host===e.host?f=h.source:h.host||(f=(e.authority+e.directory+a.uri).replace("//","/"))}else f=(h.authority+h.directory+h.file).replace("//","/");T.Parser.parse_uri(f).protocol||(f=h.host?h.protocol+"://"+f:e.protocol+"://"+f);this.add_query_data=function(a){if(this.add_query_data.length!==
 arguments.length)throw b=" WrongArgumentCountError <> Function TigerJS.io#add_query_data Epects one {1} argument,  {"+arguments.length+"} given",Error(b);f+="&"+T.http_build_query(a);return this};this.set_query_data=function(a){if(this.set_query_data.length!==arguments.length)throw b=" WrongArgumentCountError <> Function TigerJS.io#set_query_data Epects one {1} argument,  {"+arguments.length+"} given",Error(b);g="GET";f=-1<f.indexOf("?")?f.substring(0,f.indexOf("?")):f;f+="?"+T.http_build_query(a);
 return this};this.get_query_data=function(){return encodeURI(f.substring(f.indexOf("?")+1))};this.set_request_method=function(a){if(!/post|get|head|delete|put|head|options|move|lock|unlock|update|label|merge|checkout|checkin|acl|baseline-control/i.test(a)){if(l.contains(a))throw b=" SecurityError <> Function TigerJS.io#set_request_method method name ["+a+"] is ILLEGAL",Error(b);b="InvalidMethodError <> Function TigerJS.io#set_request_method method name ["+a+"] is UNKNOWN";throw Error(b);}g=a.toUpperCase();
-return this};this.get_query_data=function(){return g};this.setTimeout=function(a){try{n=c.timeout=a}catch(b){}};this.set_timeout=function(a){return this.setTimeout(a)};this.get_timeout=function(){return n};this.send=function(){c.open(g,f,!0);if(a.subscribe)for(var b in a.subscribe)switch(b){case "onloadstart":c.addEventListener("loadstart",a.subscribe.onloadstart,!1);break;case "ontimeout":c.addEventListener("timeout",a.subscribe.ontimeout,!1);break;case "onprogress":c.addEventListener("progress",
+return this};this.get_query_data=function(){return g};this.setTimeout=function(a){try{n=c.timeout=a}catch(b){throw b;}return this};this.set_timeout=function(a){return this.setTimeout(a)};this.get_timeout=function(){return n};this.send=function(){c.open(g,f,!0);if(a.subscribe)for(var b in a.subscribe)switch(b){case "onloadstart":c.addEventListener("loadstart",a.subscribe.onloadstart,!1);break;case "ontimeout":c.addEventListener("timeout",a.subscribe.ontimeout,!1);break;case "onprogress":c.addEventListener("progress",
 a.subscribe.onprogress,!1);break;case "onabort":c.addEventListener("abort",a.subscribe.onabort,!1);break;case "onerror":c.addEventListener("error",this.handle_request_errors_internally,!1);break;case "onload":c.addEventListener("load",this.handle_request_load_internally,!1);break;case "onloadend":c.addEventListener("loadend",a.subscribe.onloadend,!1);break;case "uploadloadstart":c.upload.addEventListener("loadstart",a.subscribe.uploadloadstart,!1);break;case "uploadprogress":c.upload.addEventListener("progress",
 this.handle_upload_progress_events,!1);break;case "uploadload":c.upload.addEventListener("load",a.subscribe.uploadload,!1)}this.postDataFeilds?c.send(this.postDataFeilds):c.send();return this};this.handle_request_errors_internally=function(){"OFFLINE"===T.NETWORK_STATE?a.subscribe.onerror&&a.subscribe.onerror.apply(this,["NETWORK_LOST_ERROR",1]):a.subscribe.onerror&&a.subscribe.onerror.apply(this,["NETWORK_UNKNOWN_ERROR",1])};this.handle_request_load_internally=function(){T.Iterator("400 401 403 410 501 502 503 504 505 500 302 303".split(" ")).indexOf(this.status.toString())?
 a.subscribe.onerror&&a.subscribe.onerror.apply(this,["SERVER_ERROR",this.status]):"404"===this.status.toString()?a.subscribe.onerror&&a.subscribe.onerror.apply(this,["URI_NOT_FOUND",this.status]):a.subscribe.onload.apply(this)};this.handle_upload_progress_events=function(b){b.lengthComputable?a.subscribe.uploadprogress.apply(this,[Math.round(100*b.loaded/b.total)]):a.subscribe.uploadprogress.apply(this)};this.add_data_feilds=function(a){if(this.add_data_feilds.length!==arguments.length)throw b=" WrongArgumentCountError <> Function TigerJS.io#add_data_feilds Epects one {1} argument,  {"+
@@ -101,7 +101,7 @@ arguments.length+"} given",Error(b);if(!this.postDataFeilds)throw b="InvalidMeth
 a[c]);break;case "HTMLFormElement":for(c=0;c<a.elements.length;c++)if("checkbox"===a.elements[c].type?a.elements[c].checked&&this.postDataFeilds.append(a.elements[c].name,a.elements[c].value):this.postDataFeilds.append(a.elements[c].name,a.elements[c].value),"file"===a.elements[c].getAttribute("type"))for(e=0;e<a.elements[c].files.length;e++)this.postDataFeilds.append(a.elements[c].files[e].name,a.elements[c].files[e]);break;case "HTMLInputElement":if("file"===a.getAttribute("type"))for(e=0;e<a.files.length;e++)this.postDataFeilds.append(a.files[e].name,
 a.files[e]);else"checkbox"===a.type?a.checked&&this.postDataFeilds.append(a.name,a.value):this.postDataFeilds.append(a.name,a.value)}return this};this.set_data_feilds=function(a){var c,e;if(this.set_data_feilds.length!==arguments.length)throw b=" WrongArgumentCountError <> Function TigerJS.io#set_data_feilds Expects one {1} argument,  {"+arguments.length+"} given",Error(b);e=T.type(a);this.postDataFeilds=new FormData;switch(e){case "TigerJS.Map":for(c=0;c<a.keys().length;c++)this.postDataFeilds.append(a.keys()[c],
 a.values()[c]);break;case "Object":a.documentElement&&this.postDataFeilds.append("0",a.documentElement.textContent);for(c in a)a[c].nodeType?this.add_data_feilds(a[c]):this.postDataFeilds.append(c,a[c]);break;case "HTMLFormElement":for(c=0;c<a.elements.length;c++)if("checkbox"===a.elements[c].type?a.elements[c].checked&&this.postDataFeilds.append(a.elements[c].name,a.elements[c].value):this.postDataFeilds.append(a.elements[c].name,a.elements[c].value),"file"===a.elements[c].getAttribute("type"))for(e=
-0;e<a.elements[c].files.length;e++)this.postDataFeilds.append(a.elements[c].files[e].name,a.elements[c].files[e]);break;case "HTMLInputElement":if("file"===a.getAttribute("type"))for(e=0;e<a.files.length;e++)this.postDataFeilds.append(a.files[e].name,a.files[e]);else"checkbox"===a.type?a.checked&&this.postDataFeilds.append(a.name,a.value):this.postDataFeilds.append(a.name,a.value)}};a.postData&&this.set_data_feilds(a.postData);a.queryData&&this.set_query_data(a.queryData);this.abort=function(){c.abort();
+0;e<a.elements[c].files.length;e++)this.postDataFeilds.append(a.elements[c].files[e].name,a.elements[c].files[e]);break;case "HTMLInputElement":if("file"===a.getAttribute("type"))for(e=0;e<a.files.length;e++)this.postDataFeilds.append(a.files[e].name,a.files[e]);else"checkbox"===a.type?a.checked&&this.postDataFeilds.append(a.name,a.value):this.postDataFeilds.append(a.name,a.value)}return this};a.postData&&this.set_data_feilds(a.postData);a.queryData&&this.set_query_data(a.queryData);this.abort=function(){c.abort();
 return this};this.toString=function(){return"[object TigerJS.io]"}}else if(a.subscribe.onerror)a.subscribe.onerror("ObjectError","0x1")}(b)};
 TigerJS.io.SerialRequestQueue=function(b,a,d){return new function(){var c=T.Iterator(),f=null;this.appendRequest=function(a){c[c.size()]=a;c[c.size()-1].subscribe.onload&&(c[c.size()-1].subscribe.deferedLoadEventHandler=c[c.size()-1].subscribe.onload);c[c.size()-1].subscribe.onload=this.registeredEvents.onload;c[c.size()-1].subscribe.onerror&&(c[c.size()-1].subscribe.deferedErrorEventHandler=c[c.size()-1].subscribe.onerror);c[c.size()-1].subscribe.onerror=this.registeredEvents.onerror;c[c.size()-
 1].subscribe.uploadprogress&&(c[c.size()-1].subscribe.deferedProgressEventHandler=c[c.size()-1].subscribe.uploadprogress);c[c.size()-1].subscribe.uploadprogress=this.registeredEvents.uploadprogress;c[c.size()-1]=T.io(a);return this};var g=this.send=function(){c.current().send();f=c.key;return this},e=this.abortQueue=function(){c.current().abort();f=null;c=T.Iterator();return this};this.registeredEvents={};this.registeredEvents.onload=function(){T.Iterator("400 401 403 404 410 501 502 503 504 505 500 302 303".split(" ")).indexOf(this.status.toString())?
